# omshare

./: .gitignore  LICENSE  README.md  download-photos.sh  pyproject.toml
omshare/: __init__.py  cli.py  download.py  gui.py  wifi.py
packaging/: build-macos-app.sh  build-windows.ps1  omshare_gui.py
tests/: mock_camera.py  test_download.py  test_gui.py  test_wifi.py
tests/fixtures/: commandlist.xml
